library/general/jfrog-evidence/samples/jfrogcheckevidence/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: your-jfrog-testing-pod
spec:
  containers:
  - name: testing
    image: my-jfrog-registry.jfrog.io/docker-local/your-invalid-testing-image:1.0.0
    imagePullPolicy: Always
  imagePullSecrets: 
  - name: jfrog-secret
